@@ -1,3 +1,5 @@
+  FIXED: Mangling of untranslated prepopulated fields
+         (thanks to carl.j.meyer, resolves issue 25).
   FIXED: Verbose names of translated fields are not translated.
          (thanks to carl.j.meyer, resolves issue 24).
   FIXED: Race condition between model import and translation registration in
